--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "antd": "^5.25.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
