--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "license": "MIT",
   "peerDependencies": {
@@ -22,12 +24,18 @@
   "author": "",
   "dependencies": {
     "antd": "^5.25.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@storybook/addon-docs": "^9.0.4",
+    "@storybook/addon-onboarding": "^9.0.4",
+    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
+    "@storybook/react-webpack5": "^9.0.4",
+    "@types/mdx": "^2.0.13",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "storybook": "^9.0.4",
     "typescript": "^5.8.3"
   }
 }
