--- a/package.json
+++ b/package.json
@@ -2,40 +2,32 @@
   "name": "@beds2b-group/login-modal",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build": "node build.js --bundle --loader:.css=text"
   },
   "license": "MIT",
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
-  },
   "keywords": [],
   "author": "",
   "dependencies": {
     "antd": "^5.25.3",
+    "i18next": "^25.2.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-i18next": "^15.5.2"
   },
   "devDependencies": {
-    "@storybook/addon-docs": "^9.0.4",
-    "@storybook/addon-onboarding": "^9.0.4",
-    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
-    "@storybook/react-webpack5": "^9.0.4",
-    "@types/mdx": "^2.0.13",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
-    "storybook": "^9.0.4",
+    "esbuild-plugin-text-replace": "^1.3.0",
+    "sass": "^1.89.1",
     "typescript": "^5.8.3"
   }
 }
