--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "dependencies": {
     "antd": "^5.25.3",
+    "html-react-parser": "^5.2.5",
     "i18next": "^25.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "esbuild": "^0.25.5",
     "esbuild-plugin-text-replace": "^1.3.0",
     "sass": "^1.89.1",
     "typescript": "^5.8.3"
